milestone1.ipynb: added a bit more motivation for AD, included .DS_Store in .gitignore

--- a/docs/milestone1.ipynb
+++ b/docs/milestone1.ipynb
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -366,7 +366,7 @@
        "Text(0.5,1,'Backward Euler Method')"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -437,7 +437,17 @@
    "source": [
     "The spring has a stable solution = D\n",
     "\n",
-    "For more complex functions, accurately computing the Jacobian can be numerically intensive though. Enter: **Automatic Differentiation**"
+    "Unfortunately, Backward Euler is not very suitable for more complex systems because it is a [single-step method](https://en.wikipedia.org/wiki/Linear_multistep_method). See [here](https://nbviewer.jupyter.org/urls/www.numfys.net/media/notebooks/planetary_motion.ipynb) for an example of it failing. More sophisticated integration schemes are generally needed for more complex system, but fortunately many of these schemes rely on solving the implicit integration problem $\\b X_{n+1} = \\b X_n + h\\b f(\\b X_{n+1})$ we have seen before. One way of approaching this is to re-cast it as the root finding problem\n",
+    "$$\n",
+    "\\b g(\\b X_{n+1}) = \\b X_{n+1} - \\b X_n - h\\b f(\\b X_{n+1})\\quad.\n",
+    "$$\n",
+    "\n",
+    "Here, the root of the new function $\\b g$ is the solution to our original implicit integration problem. The [Newton-Raphson method](https://en.wikipedia.org/wiki/Newton%27s_method) is a useful root finding algorithm, but it requires the computation of the Jacobian,\n",
+    "$$\n",
+    "\\b I - h\\b J\\b f(\\b X_{n+1})\\quad.\n",
+    "$$\n",
+    "\n",
+    "Accurately computing the elements of the Jacobian can be numerically expensive, so a method to quickly and accurately compute derivatives would be extremely useful. Enter: **Automatic Differentiation**"
    ]
   },
   {
@@ -932,8 +942,8 @@
    },
    "moveMenuLeft": true,
    "nav_menu": {
-    "height": "233px",
-    "width": "415px"
+    "height": "430px",
+    "width": "450px"
    },
    "navigate_menu": true,
    "number_sections": false,
