milestone1.ipynb: grouped overloading section together and added hyperlink

--- a/docs/milestone1.ipynb
+++ b/docs/milestone1.ipynb
@@ -478,21 +478,7 @@
     "= \\boxed{a_rb_r + \\epsilon(a_rb_d + a_db_r)}\\quad.\n",
     "$$\n",
     "\n",
-    "Operations like this can be redefined via *operator overloading*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Operator Overloading"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Blah blah, `__radd__`, `__truediv__`, blah"
+    "Operations like this can be redefined via *operator overloading*, which is shown in [Dual_Numbers.py](#Dual_Numbers.py)"
    ]
   },
   {
@@ -574,7 +560,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### setup.py\n",
+    "MIT License"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### setup.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```python\n",
     "from setuptools import setup\n",
     "\n",
@@ -629,9 +628,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### .gitignore# \n",
-    "Compiled python modules.\n",
-    "\n",
+    "### .gitignore#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compiled python modules."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```python\n",
     "*.pyc\n",
     "*.ipynb_checkpoints\n",
@@ -652,7 +662,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dual_Numbers.py\n",
+    "### Dual_Numbers.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```python\n",
     "import numpy as np\n",
     "\n",
@@ -891,8 +907,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### test_autodiff.py\n",
-    "\n",
+    "### test_autodiff.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "```python\n",
     "import AutoDiff\n",
     "\n",
