Update with unit testing and trig functions

--- a/docs/milestone1.ipynb
+++ b/docs/milestone1.ipynb
@@ -893,6 +893,51 @@
     "            s = f'{self.r} - e {np.abs(self.d)}'\n",
     "\n",
     "        return s\n",
+    "      \n",
+    "    def __exp__(a):\n",
+    "        \"\"\" Returns the exponentiate of a\n",
+    "        \n",
+    "        INPUTS\n",
+    "        =======\n",
+    "        self: Dual object\n",
+    "        RETURNS\n",
+    "        ========\n",
+    "        z: exponentiate of self\n",
+    "        \n",
+    "        EXAMPLES\n",
+    "        =========\n",
+    "        >>> z = exp(Dual(2,1))\n",
+    "        >>> print(z.r, z.d)\n",
+    "        2 7.4\n",
+    "        \"\"\"\n",
+    "        return Dual(exp(a.real), a.dual .* exp(a.real));\n",
+    "     \n",
+    "    def __log__(a):\n",
+    "        \"\"\" Returns the log of a with base e\n",
+    "        \n",
+    "        INPUTS\n",
+    "        =======\n",
+    "        self: Dual object\n",
+    "        RETURNS\n",
+    "        ========\n",
+    "        z: log of self\n",
+    "        \n",
+    "        EXAMPLES\n",
+    "        =========\n",
+    "        >>> z = log(Dual(2,1))\n",
+    "        >>> print(z.r, z.d)\n",
+    "        0.3, 0.5\n",
+    "        \"\"\"\n",
+    "        return Dual(log(a.real), a.dual/a.real);\n",
+    "            \n",
+    "    #Trigonometric functions\n",
+    "    def __sin__(a):\n",
+    "        return Dual(sin(a.real), a.dual .* cos(a.real));\n",
+    "    def __cos__(a):\n",
+    "        return Dual(cos(a.real), -a.dual .* sin(a.real));\n",
+    "    def __tan__(a):\n",
+    "        return Dual(tan(a.real), a.dual .* sec(a.real).^2);\n",
+    "        \n",
     "```"
    ]
   },
@@ -907,7 +952,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### test_autodiff.py"
+    "### Test_AutoDiff.py"
    ]
   },
   {
@@ -915,20 +960,23 @@
    "metadata": {},
    "source": [
     "```python\n",
-    "import AutoDiff\n",
+    "import Dual\n",
+    "import pytest\n",
     "\n",
-    "class TestDual(x):\n",
+    "class UnitTest_Dual(): \n",
+    "    def test_dual_add():\n",
+    "        assert Dual(1,2)+2 == (3,2)\n",
+    "        \n",
+    "    def test_dual_mul():\n",
+    "        assert 2 * Dual(1,2) == (2,4)\n",
     "\n",
-    "class TestAutoDiff(TestCase):\n",
-    "    def test_can_run(self):\n",
-    "        x=rand(num_points)\n",
-    "        y=rand(num_points)\n",
+    "    def test_dual_truediv():\n",
+    "        assert Dual(1,2)/Dual(1,2) ==(3.0, -2.0)\n",
     "        \n",
-    "        x_test=rand(num_test)\n",
-    "        y_test=rand(num_test)\n",
-    "        \n",
-    "        rmse=my_autodiff.rmse_score(y_test, y_predict)\n",
-    "        self.assertTrue(rmse > 0)\n",
+    "    def test_dual_trigsin():\n",
+    "        assert sin(Dual(30,1))=Dual(30, 1*cos(30))\n",
+    "\n",
+    "class Test_AutoDiff():\n",
     "```"
    ]
   }
@@ -949,7 +997,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   },
   "toc": {
    "colors": {
