updated docstring for trig functions

--- a/docs/milestone1.ipynb
+++ b/docs/milestone1.ipynb
@@ -932,10 +932,60 @@
     "            \n",
     "    #Trigonometric functions\n",
     "    def __sin__(a):\n",
-    "        return Dual(sin(a.real), a.dual .* cos(a.real));\n",
+    "        \"\"\" Returns the sine of a\n",
+    "        \n",
+    "        INPUTS\n",
+    "        =======\n",
+    "        self: Dual object\n",
+    "        \n",
+    "        RETURNS\n",
+    "        ========\n",
+    "        z: sine of self\n",
+    "        \n",
+    "        EXAMPLES\n",
+    "        =========\n",
+    "        >>> z = sin(Dual(0,1))\n",
+    "        >>> print(z.r, z.d)\n",
+    "        0, 1\n",
+    "        \"\"\"\n",
+    "        return Dual(sin(a.real), a.dual .* cos(a.real))\n",
+    "        \n",
     "    def __cos__(a):\n",
+    "        \"\"\" Returns the cosine of a\n",
+    "        \n",
+    "        INPUTS\n",
+    "        =======\n",
+    "        self: Dual object\n",
+    "        \n",
+    "        RETURNS\n",
+    "        ========\n",
+    "        z: cosine of self\n",
+    "        \n",
+    "        EXAMPLES\n",
+    "        =========\n",
+    "        >>> z = cosine(Dual(0,1))\n",
+    "        >>> print(z.r, z.d)\n",
+    "        1, 0\n",
+    "        \"\"\"\n",
     "        return Dual(cos(a.real), -a.dual .* sin(a.real));\n",
     "    def __tan__(a):\n",
+    "        \"\"\" Returns the tangent of a\n",
+    "        \n",
+    "        INPUTS\n",
+    "        =======\n",
+    "        self: Dual object\n",
+    "        \n",
+    "        RETURNS\n",
+    "        ========\n",
+    "        z: tangent of self\n",
+    "        \n",
+    "        EXAMPLES\n",
+    "        =========\n",
+    "        >>> z = tan(Dual(0,1))\n",
+    "        >>> print(z.r, z.d)\n",
+    "        0, 1\n",
+    "        \"\"\"\n",
+    "    \n",
     "        return Dual(tan(a.real), a.dual .* sec(a.real).^2);\n",
     "        \n",
     "```"
