--- a/docs/milestone1.ipynb
+++ b/docs/milestone1.ipynb
@@ -516,7 +516,13 @@
     "        setup.py\n",
     "        LICENSE\n",
     "        MANIFEST.in\n",
-    "        .gitignore"
+    "        .gitignore\n",
+    "        \n",
+    "__Testing__\n",
+    "\n",
+    "* We will use Travis and Coverall to check that we pass the tests.for the testing. \n",
+    "\n",
+    "* Before we upload our package to Python Packing Index, we will use Test PyPi for testing and experimenting. "
    ]
   },
   {
@@ -893,8 +899,26 @@
     "            s = f'{self.r} - e {np.abs(self.d)}'\n",
     "\n",
     "        return s\n",
-    "      \n",
-    "    def __exp__(a):\n",
+    "     \n",
+    "    def __inverse__(self):\n",
+    "        \"\"\" Returns the inverse of self\n",
+    "        \n",
+    "        INPUTS\n",
+    "        =======\n",
+    "        self: Dual object\n",
+    "        RETURNS\n",
+    "        ========\n",
+    "        z: 1/self\n",
+    "        \n",
+    "        EXAMPLES\n",
+    "        =========\n",
+    "        >>> z = inverse(Dual(2,1))\n",
+    "        >>> print(z.r, z.d)\n",
+    "        1/2, -1/4\n",
+    "        \"\"\"\n",
+    "        return Dual(1/self.r, -self.d/(self.r**2));\n",
+    "        \n",
+    "    def __exp__(self):\n",
     "        \"\"\" Returns the exponentiate of a\n",
     "        \n",
     "        INPUTS\n",
@@ -910,8 +934,34 @@
     "        >>> print(z.r, z.d)\n",
     "        2 7.4\n",
     "        \"\"\"\n",
-    "        return Dual(exp(a.real), a.dual .* exp(a.real));\n",
+    "        return Dual(exp(self.r), self.d * exp(self.r));\n",
     "     \n",
+    "#     def __sqrt__(self):\n",
+    "#         \"\"\" Returns the square root of self\n",
+    "        \n",
+    "#         INPUTS\n",
+    "#         =======\n",
+    "#         self: Dual object\n",
+    "#         RETURNS\n",
+    "#         ========\n",
+    "#         z: square root of self\n",
+    "        \n",
+    "#         EXAMPLES\n",
+    "#         =========\n",
+    "#         >>> z = sqrt(Dual(4,1))\n",
+    "#         >>> print(z.r, z.d)\n",
+    "#         4, 0.25\n",
+    "#         \"\"\"\n",
+    "#         r_sqrt=sqrt(self.r)\n",
+    "#         return Dual(r_sqrt, 0.5f * self.d/r_sqrt)\n",
+    "    \n",
+    "#     def __pow__(self, power):\n",
+    "#         self.r*power.r*(1+ε(self.d*ln(self.r)+(self.d*power.r)/self.r)\n",
+    "#         #ac(1+ε(dlna+bc/a))\n",
+    "#         z.real=self.r*power.r\n",
+    "#         z.dual=\n",
+    "#         return(z.real, z.dual)\n",
+    "    \n",
     "    def __log__(a):\n",
     "        \"\"\" Returns the log of a with base e\n",
     "        \n",
