M2: Ran some quick doctests on newtons_method, cleaned up a few of its methods, added scalar input case to notebook

--- a/newtons_method.ipynb
+++ b/newtons_method.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,12 +14,69 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Scalar function, returns gradient vector"
+    "# Scalar function, scalar input, returns scalar"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "125.00 + e 75.00"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def f(x):\n",
+    "    return x**3\n",
+    "\n",
+    "p = 5  # evaluation point\n",
+    "p_x = d.Dual(p) # call Dual object\n",
+    "\n",
+    "# should print f(p) + e df/dx evaluated at p\n",
+    "f(p_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "125 75\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check\n",
+    "def df_dx(x):\n",
+    "    return 3*x**2\n",
+    "\n",
+    "print(f(p), df_dx(p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Scalar function, vector input, returns gradient vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +85,7 @@
        "26.80 + e [ 6.64 10.2 ]"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -37,9 +94,9 @@
     "def f(x, y): # can be x, y, x_0, x_1, whatev\n",
     "    return 3*x*y - 2*y**3/x\n",
     "\n",
-    "p = np.array([5, 2]) # evaluation point\n",
+    "p = np.array([5, 2]) # evaluation point (x, y) = (5, 3)\n",
     "\n",
-    "p_x = d.Dual(p[0], idx=0, x=p)\n",
+    "p_x = d.Dual(p[0], idx=0, x=p) \n",
     "p_y = d.Dual(p[1], idx=1, x=p)\n",
     "\n",
     "# should print f(p), grad(f) evaluated at p\n",
@@ -48,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,12 +128,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Vector function, returns Jacobian matrix"
+    "# Vector function, vector input, returns Jacobian matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 286,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +143,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 286,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 298,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +182,7 @@
        "       [ 1., 48.]])"
       ]
      },
-     "execution_count": 298,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,21 +201,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Where the output is automatically an `ndarray`"
+    "where the output is automatically an `ndarray`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 5.  9. 29.] \n",
+      "[ 5.  9. 29.]\n",
       "\n",
-      " [[ 4.  1.]\n",
+      "[[ 4.  1.]\n",
       " [10. 12.]\n",
       " [ 1. 48.]]\n"
      ]
@@ -173,7 +230,219 @@
     "                        3*y**2/x + 2*x**2*y + 4*y**3])\n",
     "    return(np.array([grad_f1, grad_f2, grad_f3]))\n",
     "\n",
-    "print(F(*p), '\\n\\n' ,jac_F(*p))"
+    "print(F(*p))\n",
+    "print()\n",
+    "print(jac_F(*p))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Doctest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trying:\n",
+      "    z = Dual(1, 2) + Dual(3, 4)\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(z)\n",
+      "Expecting:\n",
+      "    4.00 + e 6.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = 2 + Dual(1, 2)\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(z)\n",
+      "Expecting:\n",
+      "    3.00 + e 2.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = Dual(1, 2) * Dual(3, 4)\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(z)\n",
+      "Expecting:\n",
+      "    3.00 + e 10.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = 2 * Dual(1, 2)\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(z)\n",
+      "Expecting:\n",
+      "    2.00 + e 4.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = Dual(1, 2)\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(-z)\n",
+      "Expecting:\n",
+      "    -1.00 - e 2.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = Dual(1, 2)\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(+z)\n",
+      "Expecting:\n",
+      "    1.00 + e 2.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = Dual(1, 2) ** Dual(3, 4)\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(z)\n",
+      "Expecting:\n",
+      "    1.00 + e 6.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = Dual(1, 2)\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(z)\n",
+      "Expecting:\n",
+      "    1.00 + e 2.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = 2 - Dual(1, 2)\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(z)\n",
+      "Expecting:\n",
+      "    1.00 - e 2.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = 2 / Dual(1, 2)\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(z)\n",
+      "Expecting:\n",
+      "    2.00 - e 4.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = Dual(1, 2) - Dual(3, 4)\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(z)\n",
+      "Expecting:\n",
+      "    -2.00 - e 2.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = Dual(1, 2) - 2\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(z)\n",
+      "Expecting:\n",
+      "    -1.00 + e 2.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = Dual(1, 2) / 2\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(z)\n",
+      "Expecting:\n",
+      "    0.50 + e 1.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = Dual(3, 4) / Dual(1, 2)\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(z)\n",
+      "Expecting:\n",
+      "    3.00 - e 2.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = np.cos(Dual(0, 1))\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(z)\n",
+      "Expecting:\n",
+      "    1.00 + e -0.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = np.sin(Dual(0, 1))\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(z)\n",
+      "Expecting:\n",
+      "    0.00 + e 1.00\n",
+      "ok\n",
+      "Trying:\n",
+      "    z = np.tan(Dual(0,1))\n",
+      "Expecting nothing\n",
+      "ok\n",
+      "Trying:\n",
+      "    print(z)\n",
+      "Expecting:\n",
+      "    0.00 + e 1.00\n",
+      "ok\n",
+      "3 items had no tests:\n",
+      "    DualNumber\n",
+      "    DualNumber.Dual\n",
+      "    DualNumber.Dual.__init__\n",
+      "13 items passed all tests:\n",
+      "   4 tests in DualNumber.Dual.__add__\n",
+      "   4 tests in DualNumber.Dual.__mul__\n",
+      "   2 tests in DualNumber.Dual.__neg__\n",
+      "   2 tests in DualNumber.Dual.__pos__\n",
+      "   2 tests in DualNumber.Dual.__pow__\n",
+      "   2 tests in DualNumber.Dual.__repr__\n",
+      "   2 tests in DualNumber.Dual.__rsub__\n",
+      "   2 tests in DualNumber.Dual.__rtruediv__\n",
+      "   4 tests in DualNumber.Dual.__sub__\n",
+      "   4 tests in DualNumber.Dual.__truediv__\n",
+      "   2 tests in DualNumber.Dual.cos\n",
+      "   2 tests in DualNumber.Dual.sin\n",
+      "   2 tests in DualNumber.Dual.tan\n",
+      "34 tests in 16 items.\n",
+      "34 passed and 0 failed.\n",
+      "Test passed.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "TestResults(failed=0, attempted=34)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import doctest\n",
+    "doctest.testmod(d, verbose=True)"
    ]
   }
  ],
