--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -4,16 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Introduction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Problem:** Determine the equation of motion of a body or collection of bodies given initial conditions of the system\n",
+    "# Introduction\n",
     "\n",
-    "**Solution:** AD. Allows machine precision computation of derivatives, which can be used in the computation of Jacobians involved in implicit differentiation."
+    "\n",
+    "**Problem:** Determine the equation of motion of a body or collection of bodies given initial conditions of the system.\n",
+    "\n",
+    "**Solution:** Automatic differentiation (AD henceforth), allows machine precision computation of derivatives, which can be used in the computation of Jacobians involved in implicit differentiation.\n",
+    "\n",
+    "\n"
    ]
   },
   {
