--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -18,6 +18,123 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Background"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Euler's Method\n",
+    "Euler's method is a numerical procedure for solving ordinary differential equations with a given initial value. In the case of our problem statement, here is how it applies:\n",
+    "\n",
+    "* We have some initial conditions, like position and velocity of a planet, and we want to know what kind of orbit this planet will trace out, given that only the force acting on it is gravity. \n",
+    "* Using the physical insight that the \"slope\" of position over time is velocity, and the \"slope\" of velocity over time is acceleration, we can predict, or integrate, how the quantities will change over time. \n",
+    "* More explicitly, we can use the acceleration supplied by gravity to predict the velocity of our planet, and then use this velocity to predict its position a timestep $\\Delta t$ later. \n",
+    "* This gives us a new position and the whole process starts over again at the next timestep. Here is a schematic of the Euler integration method.\n",
+    "<img src=\"http://jmahaffy.sdsu.edu/courses/f00/math122/lectures/num_method_diff_equations/images/euler_ani.gif\">\n",
+    "\n",
+    "This plot above could represent the component of the planet's velocity varies over time. Specifically, we have some solution curve (black) that we want to approximate (red), given that we only know two things:\n",
+    "* where we started $(t_0, y_0)$\n",
+    "* the rate of how where we were changes with time $\\left(y'_0 = \\frac{y_1 - y_0}{\\Delta t}\\right)$\n",
+    "\n",
+    "The beauty of this is that even though we do not explicity know what $y_1$ is, the fact that we are given $y'_0$ from the initial conditions allows us to bootstrap our way around this. Starting with the definition of slope, we can use the timestep $h = \\Delta t$, to find where we will be a timestep later $y_1$:\n",
+    "\\begin{align*}\n",
+    " y_0' = \\frac{y_1 - y_0}{\\Delta t}\\quad\\longrightarrow\\quad\n",
+    " y_1 = y_0 + \\Delta t\\ y_0'\\quad.\n",
+    "\\end{align*}\n",
+    "\n",
+    "Generalizing to any timestep $n$:\n",
+    "\\begin{align*}\n",
+    "y_{n+1} = y_n + \\Delta t\\ y_n'\n",
+    "\\end{align*}\n",
+    "\n",
+    "Whenever all of the $n+1$ terms are on one side of the equation and the $n$ terms are on the other, we have something called an *explicit numerical method*. This is intuitively straightforward and easy to implement, but there is a downside, the solutions **do not converge** for a given timestep.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stiff Oscillator\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instead of worrying about what the actual equation of motion of our spring in the previous example looks like, we can consider an oscillator with some motion $x(t)$ along the x-axis confined to an area that is close to this axis. In other words,\n",
+    "$$\n",
+    "\\newcommand{b}[1]{\\mathbf#1}\n",
+    "\\newcommand{od}[2]{\\frac{\\mathrm{d}#1}{\\mathrm{d}#2}}\n",
+    "\\begin{align*}\n",
+    "\\b f(\\b X_n) = \\dot{\\b X}_n = \\od{}{t}\\begin{bmatrix}x_n\\\\y_n\\end{bmatrix}\n",
+    "= \\begin{bmatrix}-x_n\\\\-ky_n\\end{bmatrix}\n",
+    "\\end{align*}\\quad,\n",
+    "$$\n",
+    "\n",
+    "for large $k$ to constrain our oscillator to the x-axis.\n",
+    "\n",
+    "Running our explicit Euler scheme then gives,\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "\\b X_{n+1} = \\b X_n + h\\b f(\\b X_n) \n",
+    "= \\begin{pmatrix}x_0\\\\y_0\\end{pmatrix}\n",
+    "+ h\\begin{pmatrix}-x_0\\\\-ky_0\\end{pmatrix}\n",
+    "= \\begin{bmatrix}(1 - h)x_0\\\\(1 - hk) y_0\\end{bmatrix}\n",
+    "\\end{align*}\\quad.\n",
+    "$$\n",
+    "\n",
+    "This is our problem. If $|1 - hk| > 0$, then $|y_{n+1}| > |y_n|$, which would imply that our spring would actually get farther and farther away from the x-axis! In other words, if we happened to select a timestep larger than $h = 2/k$, our solution would not converge. By definition, $k$ is large, so the only way to avoid having this system blow up on us is to select very small timesteps, which is computationally expensive and would take forever to run. \n",
+    "\n",
+    "We need a scheme that will remain stable for a wide range of timesteps, which is what *implicit differentiation can accomplish*. One way of approaching this is to re-cast it as the root finding problem\n",
+    "$$\n",
+    "\\b g(\\b X_{n+1}) = \\b X_{n+1} - \\b X_n - h\\b f(\\b X_{n+1})\\quad.\n",
+    "$$\n",
+    "\n",
+    "Here, the root of the new function $\\b g$ is the solution to our original implicit integration problem. The [Newton-Raphson method](https://en.wikipedia.org/wiki/Newton%27s_method) is a useful root finding algorithm, but it requires the computation of the Jacobian,\n",
+    "$$\n",
+    "\\b I - h\\b J\\b f(\\b X_{n+1})\\quad.\n",
+    "$$\n",
+    "\n",
+    "Accurately computing the elements of the Jacobian can be numerically expensive, so a method to quickly and accurately compute derivatives would be extremely useful. Enter: **Automatic Differentiation**."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Automatic Differentiation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is a method to simultaneously compute a function and its derivative to machine precision. This can be done by introducing the dual number $\\epsilon^2=0$, where $\\epsilon\\ne0$. If we transform some arbitrary function $f(x)$ to $f(x+\\epsilon)$ and expand it, we have:\n",
+    "$$\n",
+    "\\begin{align*}\n",
+    "f(x+\\epsilon) = f(x) + \\epsilon f'(x) + O(\\epsilon^2)\\quad.\n",
+    "\\end{align*}\n",
+    "$$\n",
+    "\n",
+    "By the definition of $\\epsilon$, all second order and higher terms in $\\epsilon$ vanish and we are left with $f(x+\\epsilon) = f(x) + \\epsilon f'(x)$, where the dual part, $f'(x)$, of this transformed function is the derivative of our original function $f(x)$. If we adhere to the new system of algebra introduced by dual numbers, we are able to compute derivatives of functions exactly. \n",
+    "\n",
+    "For example, multiplying two dual numbers $z_1 = a_r + \\epsilon a_d$ and \n",
+    "$z_2 = b_r + \\epsilon b_d$ would behave like:\n",
+    "$$\n",
+    "z_1 \\times z_2 = (a_r + \\epsilon a_d) \\times (b_r + \\epsilon b_d)\n",
+    "= a_rb_r + \\epsilon(a_rb_d + a_db_r) + \\epsilon^2 a_db_d\n",
+    "= \\boxed{a_rb_r + \\epsilon(a_rb_d + a_db_r)}\\quad.\n",
+    "$$\n",
+    "\n",
+    "Operations like this can be redefined via *operator overloading*, which is shown in [Dual_Numbers.py](#Dual_Numbers.py)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# How to use our package"
    ]
   },
