--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -49,21 +49,9 @@
     "y_{n+1} = y_n + \\Delta t\\ y_n'\n",
     "\\end{align*}\n",
     "\n",
-    "Whenever all of the $n+1$ terms are on one side of the equation and the $n$ terms are on the other, we have something called an *explicit numerical method*. This is intuitively straightforward and easy to implement, but there is a downside, the solutions **do not converge** for a given timestep.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Stiff Oscillator\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Instead of worrying about what the actual equation of motion of our spring in the previous example looks like, we can consider an oscillator with some motion $x(t)$ along the x-axis confined to an area that is close to this axis. In other words,\n",
+    "Whenever all of the $n+1$ terms are on one side of the equation and the $n$ terms are on the other, we have something called an *explicit numerical method*. This is intuitively straightforward and easy to implement, but there is a downside, the solutions **do not converge** for a given timestep. A solution to this would be to consider an implicit analogue to Euler's method. \n",
+    "\n",
+    "Instead, we can recast our problem in the form of an oscillator with some motion $x(t)$ along the x-axis confined to an area that is close to this axis. In other words,\n",
     "$$\n",
     "\\newcommand{b}[1]{\\mathbf#1}\n",
     "\\newcommand{od}[2]{\\frac{\\mathrm{d}#1}{\\mathrm{d}#2}}\n",
@@ -85,7 +73,7 @@
     "\\end{align*}\\quad.\n",
     "$$\n",
     "\n",
-    "This is our problem. If $|1 - hk| > 0$, then $|y_{n+1}| > |y_n|$, which would imply that our spring would actually get farther and farther away from the x-axis! In other words, if we happened to select a timestep larger than $h = 2/k$, our solution would not converge. By definition, $k$ is large, so the only way to avoid having this system blow up on us is to select very small timesteps, which is computationally expensive and would take forever to run. \n",
+    "**This is our problem**. If $|1 - hk| > 0$, then $|y_{n+1}| > |y_n|$, which would imply that our spring would actually get farther and farther away from the x-axis! In other words, if we happened to select a timestep larger than $h = 2/k$, our solution would not converge. By definition, $k$ is large, so the only way to avoid having this system blow up on us is to select very small timesteps, which is computationally expensive and would take forever to run. \n",
     "\n",
     "We need a scheme that will remain stable for a wide range of timesteps, which is what *implicit differentiation can accomplish*. One way of approaching this is to re-cast it as the root finding problem\n",
     "$$\n",
@@ -97,7 +85,9 @@
     "\\b I - h\\b J\\b f(\\b X_{n+1})\\quad.\n",
     "$$\n",
     "\n",
-    "Accurately computing the elements of the Jacobian can be numerically expensive, so a method to quickly and accurately compute derivatives would be extremely useful. Enter: **Automatic Differentiation**."
+    "Accurately computing the elements of the Jacobian can be numerically expensive, so a method to quickly and accurately compute derivatives would be extremely useful. Enter: **Automatic Differentiation**.\n",
+    "\n",
+    "Our software package uses the [Newton-Raphson method](https://en.wikipedia.org/wiki/Newton%27s_method) as an implicit differentiation technique to overcome the stability problems thats explicit methods (such as Forward Euler) fail to accomplish. For this, we use automatic differentiation to compute the elements of the Jacobian necessary for Newst\n"
    ]
   },
   {
