added headers for new section

--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -18,8 +18,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# How to use our package"
+    "# How to Use This Package"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -46,7 +53,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These following series of demos will walk you through how to differentiate a wide variety of functions with `spacejam`"
+    "These following series of demos will walk you through how to differentiate a wide variety of functions with `spacejam`."
    ]
   },
   {
@@ -450,7 +457,7 @@
     "\\b I - h\\b J\\b f(\\b X_{n+1})\\quad.\n",
     "$$\n",
     "\n",
-    "Accurately computing the elements of the Jacobian can be numerically expensive, so a method to quickly and accurately compute derivatives would be extremely useful. Enter: **Automatic Differentiation**.\n",
+    "Accurately computing the elements of the Jacobian can be numerically expensive, so a method to quickly and accurately compute derivatives would be extremely useful.\n",
     "\n",
     "In order to solve [Newton-Raphson method](https://en.wikipedia.org/wiki/Newton%27s_method) as an implicit differentiation technique to overcome the stability problems thats explicit methods (such as Forward Euler) fail to accomplish. For this, our package uses automatic differentiation to compute the elements of the Jacobian necessary for Newston-Raphson method. \n"
    ]
@@ -1115,6 +1122,20 @@
     "class Test_AutoDiff():\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Future"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
