remoed milestone 1 and 2 from softare org branch

--- a/docs/Documentation.ipynb
+++ b/docs/Documentation.ipynb
@@ -9,6 +9,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "--> SHORTENED VERSION INTRO!"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
