more updates from sherif

--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -39,14 +39,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "source venv/bin/activate"
+    "To install our package, first create a virtual environment using the following command (this should be done in the SpaceJam root folder):"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "python -m venv venv"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Demo"
+    "And proceed to activate it as such:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    ". /venv/bin/activate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now you should be able to proceed with the demo below. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Package Demo"
    ]
   },
   {
@@ -1135,7 +1163,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Lur cur\n",
+    "\n",
+    "**Problem:** Determine the equation of motion of a body or collection of bodies given initial conditions of the system.\n",
+    "\n",
+    "**Solution:** Automatic differentiation (AD henceforth), allows machine precision computation of derivatives, which can be used in the computation of Jacobians involved in implicit differentiation.\n",
+    "\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
