more updates from sherif

--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -1159,12 +1159,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "Lur cur\n",
+    "Our current package is used to solve a system of equations. However, future work could ambitiously extend this functionality to more applicable tastks. For example, we could try to determine the equation of motion of a body or collections \n",
+    "\n",
+    "extend this \n",
     "\n",
     "**Problem:** Determine the equation of motion of a body or collection of bodies given initial conditions of the system.\n",
     "\n",
