More updates from sherif

--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -6,10 +6,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "\n",
-    "**Problem:** Determine the equation of motion of a body or collection of bodies given initial conditions of the system.\n",
-    "\n",
-    "**Solution:** Automatic differentiation (AD henceforth), allows machine precision computation of derivatives, which can be used in the computation of Jacobians involved in implicit differentiation.\n",
+    "Our problem is to solve a system of equations given initial conditions of the system. Our solution to this problem is to use Automstic Differentiation for machine precision computation of derivatives which can be used in the computation of Jacobians involved in implicit differentiation.\n",
     "\n",
     "\n"
    ]
@@ -20,13 +17,6 @@
    "source": [
     "# How to Use This Package"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1162,15 +1152,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our current package is used to solve a system of equations. However, future work could ambitiously extend this functionality to more applicable tastks. For example, we could try to determine the equation of motion of a body or collections \n",
-    "\n",
-    "extend this \n",
-    "\n",
-    "**Problem:** Determine the equation of motion of a body or collection of bodies given initial conditions of the system.\n",
-    "\n",
-    "**Solution:** Automatic differentiation (AD henceforth), allows machine precision computation of derivatives, which can be used in the computation of Jacobians involved in implicit differentiation.\n",
-    "\n",
-    "\n"
+    "Our current package is used to solve a system of equations. However, future work could ambitiously extend this functionality to more applicable tastks. For example, we could try to determine the equation of motion of a body or collections of bodies given initial conditions of a system."
    ]
   }
  ],
