--- a/docs/milestone2.ipynb
+++ b/docs/milestone2.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "Our problem is to solve a system of equations given initial conditions of the system. Our solution to this problem is to use Automstic Differentiation for machine precision computation of derivatives which can be used in the computation of Jacobians involved in implicit differentiation.\n",
+    "Our problem is to solve a system of equations given initial conditions of the system. Our solution to this problem is to use Automatic Differentiation for machine precision computation of derivatives which can be used in the computation of Jacobians involved in implicit differentiation.\n",
     "\n",
     "\n"
    ]
@@ -51,6 +51,20 @@
    "metadata": {},
    "source": [
     ". /venv/bin/activate"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If you run this in the root folder, you should also install all dependencies via:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "pip -install -r requirements.txt"
    ]
   },
   {
@@ -415,10 +429,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Euler's Method As a Solution to Our Collection of Bodies Problem\n",
+    "## Euler's Method As a Solution to Our Problem\n",
     "Euler's method is a numerical procedure for solving ordinary differential equations with a given initial value. In the case of our problem statement, here is how it applies:\n",
     "\n",
-    "* We have some initial conditions, like position and velocity of a planet, and we want to know what kind of orbit this planet will trace out, given that only the force acting on it is gravity. \n",
+    "* We have some initial conditions (such as position and velocity of a planet) and we want to know what kind of orbit this planet will trace out, given that only the force acting on it is gravity. \n",
     "* Using the physical insight that the \"slope\" of position over time is velocity, and the \"slope\" of velocity over time is acceleration, we can predict, or integrate, how the quantities will change over time. \n",
     "* More explicitly, we can use the acceleration supplied by gravity to predict the velocity of our planet, and then use this velocity to predict its position a timestep $\\Delta t$ later. \n",
     "* This gives us a new position and the whole process starts over again at the next timestep. Here is a schematic of the Euler integration method.\n",
@@ -477,7 +491,7 @@
     "\n",
     "Accurately computing the elements of the Jacobian can be numerically expensive, so a method to quickly and accurately compute derivatives would be extremely useful.\n",
     "\n",
-    "In order to solve [Newton-Raphson method](https://en.wikipedia.org/wiki/Newton%27s_method) as an implicit differentiation technique to overcome the stability problems thats explicit methods (such as Forward Euler) fail to accomplish. For this, our package uses automatic differentiation to compute the elements of the Jacobian necessary for Newston-Raphson method. \n"
+    "In order to solve [Newton-Raphson method](https://en.wikipedia.org/wiki/Newton%27s_method) as an implicit differentiation technique to overcome the stability problems thats explicit methods (such as Forward Euler) fail to accomplish. For this, our package uses automatic differentiation to compute the elements of the Jacobian necessary for the Newston-Raphson method. \n"
    ]
   },
   {
@@ -1145,15 +1159,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Future"
+    "# Future Work"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our current package is used to solve a system of equations. However, future work could ambitiously extend this functionality to more applicable tastks. For example, we could try to determine the equation of motion of a body or collections of bodies given initial conditions of a system."
+    "Our current package is used to solve a system of equations. For our future work, we will extend this functionality in the form of a test suite for application to a 2D orbital system. As previously mentioned, we need a method that is insensitive to the number of timesteps needed to arrive at a solution. A high order implicit differentiation scheme applied to a 2D orbital system should work. \n",
+    "\n",
+    "Our software will \n",
+    "\n",
+    "However, future work could ambitiously extend this functionality to large tasks within astronomy or astrophysics, such as a 2D orbital system. For example, we could try to determine the equation of motion of a body or collections of bodies given initial conditions of a system.\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
